feat: auth flows, Mongoose User, EmailService, update user endpoint and tests fixes

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -47,6 +48,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
